Corrección Vista, Mensaje de conexión

--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,10 @@
 			height: 500px;
 			width: 300px;
 		}
+		#camaras{
+			height: 500px;
+			width: 300px;
+		}
 		#salaChat{
 			display: none;
 		}
@@ -31,7 +35,7 @@
 				margin-left: 35%;
 		}
 		#butonMenu{
-				margin-left: 25%;
+				margin-left: 15%;
 		}
 	</style>
 </head>
@@ -50,20 +54,23 @@
 	<!-- End -->
 	
 	<!-- Sala del chat: Texto, Video y Audio -->	
-	<div id="AreaCamaras" class="container row">
-		<div class="col-lg-4">
-			<span class="label label-info">Cámaras</span>
-			JOSE ESCONDEME CON JS
-			<div id="camaras" class="thumbnail">
-
-			</div>
-		</div>
-	</div>
+	
 
 	<div id="salaChat" class="container row">
 		<!--<button id="botonIniciar" type="button">Iniciar</button><button id="botonParar" type="button">Parar</button>-->
 		
-		
+		<div class="col-lg-4">
+			<span class="label label-info">Cámaras</span>
+			<div id="camaras" class="thumbnail">
+
+			</div>
+			<div class="btn-group" id="butonMenu">
+			  <button id="botonIniciar" type="button" class="btn btn-default">Iniciar</button>
+			  <button id="botonSiguiente" type="button" disabled="true" class="btn btn-default">Siguiente</button>
+			  <button id="botonParar" type="button" disabled="true" class="btn btn-default">Fin</button>
+			</div>
+		</div>
+
 		<!-- Apartado para el chat -->
 		<div class="col-lg-4">
 		<span class="label label-info">Chat</span>
@@ -85,12 +92,6 @@
 			<div id="usuarios" class="thumbnail">
 				<p>Usuarios En Linea</p>
 			</div>
-			<div class="btn-group-vertical" id="butonMenu">
-			  <button id="botonIniciar" type="button" class="btn btn-default">Iniciar</button>
-			  <button id="botonSiguiente" type="button" disabled="true" class="btn btn-default">Siguiente</button>
-			  <button id="botonParar" type="button" disabled="true" class="btn btn-default">Fin</button>
-			</div>
-
 		</div>
 	</div>
 	<!-- END -->
