--- a/views/index.html
+++ b/views/index.html
@@ -72,12 +72,12 @@
           	<!-- cámara compañero -->
             <span class="label label-info">Cámara Ajena</span>
             <div class="thumbnail" id="camaraAjena">
-                <div id="subscribersDiv" width="320" height="200"></div>
+                <div id='subscribersDiv' width="320" height="200"></div>
             </div>
             <!-- cámara cpropia -->
             <span class="label label-info">Cámara Propia</span>
             <div class="thumbnail" id="camaraPropia">
-                <div id="myPublisherDiv" width="320" height="200"></div>
+                <div id='myPublisherDiv' width="320" height="200"></div>
             </div>
             <!-- botones de control -->
             <div class="btn-group" id="butonMenu">
